# ProxyAuth

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf
DummyWebsite/: index.html
Frontend/: Frontend.js  frontend.css  frontend.html  index.html
Proxy_Authenticator_App/: .env  Cargo.toml  Database.sql  Dockerfile
Proxy_Authenticator_App/.sqlx/: query-0a1ab641cdf69b5c227574f9537bedbbf11b016a5d49a9e81d35464d79cdfed2.json  query-0b35d323cc6a649699ab891a1dce3dc3c928465b13696999bb1559284560be45.json  query-64e7373edc875070b7a7d53080edff51f3f9de49b70b0bbe390367c0330203ad.json  query-9032b9419d07696df8e20d1cefa51ef9121b646d048a8f5ec2d635dd5b80cbbc.json  query-9bc46bd233a316bedb8e63af00a4f83e3e5b6d3658a268e1acb26ae3aae169dc.json  query-a646c0374f28cf894083362d223cac135caaf87e94c8c8aec1668b9207e2faa6.json  query-b9c1f0ea264599b25706eaaf9900f95d3b61fed9be9554e4dca8a415b82d05cb.json  query-fb34dd96a3be4b485625a0404d72de3c046775dd464286332ebd2686ef784659.json
Proxy_Authenticator_App/Frontend/: Frontend.js  index.html
Proxy_Authenticator_App/src/: Auth_Server.rs  Website_Server.rs  auth.rs  main.rs  sql.rs  web_server.rs
Proxy_Authenticator_App/src/scripts/: Database.sql
Proxy_Authenticator_App/src/scripts/dev/: insertRandomUsers.rs
mySQL/: Database.sql  Dockerfile
