[package]
name = "Proxy_Authenticator_App"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
mysql = "25.0.0"

# Hidden password input for CLI prompts (if needed)
rpassword = "7"

# WebAuthn / FIDO2 authentication
webauthn-rs = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"

# Serialization / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"

