[package]
name = "Proxy_Authenticator_App"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
actix-files = "0.6"
futures = "0.3.31"
hyper = { version = "1.8.1", features = ["full"] }
lazy_static = "1.5.0"
# Database
mysql = "25.0.0"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-native-tls", "postgres"] }
bcrypt = "0.15"
# Hidden password input for CLI prompts (if needed)
rpassword = "7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.7"
uuid = { version = "1.19", features = ["v4"] }
base64 = "0.22.1"

webauthn-rs = { version = "0.5.3"}

webauthn-rs-core = "0.5"

